# recommender-system

./: pyproject.toml
notebook/: csds335_project3_group7_notebook.ipynb  csds435_project3_group7_notebook.ipynb  knn_predictions_k80.csv
outputs/: knn_predictions.csv  knn_predictions_k80.csv  mf_predictions.csv  mf_reg_predictions.csv  nn_predictions.csv  random_predictions.csv  svd_predictions.csv
report/: main.tex
report/sections/: algorithms.tex  conclusion.tex  contributions.tex  discussion.tex  introduction.tex  metadata.tex  results.tex
src/: data_utils.py  nn_rec.py  random_rec.py  svd_rec.py
